// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Checkboxes Standard smoke-test 1`] = `
<div class="nhsuk-form-group">
  <fieldset class="nhsuk-fieldset"
            aria-describedby="nationality--hint"
  >
    <legend class="nhsuk-fieldset__legend">
      What is your nationality?
    </legend>
    <div class="nhsuk-form-group">
      <div class="nhsuk-hint"
           id="nationality--hint"
      >
        If you have more than 1 nationality, select all options that are relevant to you.
      </div>
      <div class="nhsuk-checkboxes"
           id="nationality"
           aria-describedby="nationality--hint"
      >
        <div class="nhsuk-checkboxes__item">
          <input class="nhsuk-checkboxes__input"
                 name="nationality"
                 id="nationality-1"
                 type="checkbox"
                 value="british"
          >
          <label class="nhsuk-label nhsuk-checkboxes__label"
                 id="nationality-1--label"
                 for="nationality-1"
          >
            British
          </label>
        </div>
        <div class="nhsuk-checkboxes__item">
          <input class="nhsuk-checkboxes__input"
                 name="nationality"
                 id="nationality-2"
                 type="checkbox"
                 value="irish"
          >
          <label class="nhsuk-label nhsuk-checkboxes__label"
                 id="nationality-2--label"
                 for="nationality-2"
          >
            Irish
          </label>
        </div>
        <div class="nhsuk-checkboxes__item">
          <input class="nhsuk-checkboxes__input"
                 name="nationality"
                 id="nationality-3"
                 type="checkbox"
                 value="other"
          >
          <label class="nhsuk-label nhsuk-checkboxes__label"
                 id="nationality-3--label"
                 for="nationality-3"
          >
            Citizen of another country
          </label>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Components/Checkboxes WithConditionalContent smoke-test 1`] = `
<div class="nhsuk-form-group">
  <fieldset class="nhsuk-fieldset"
            aria-describedby="waste--hint"
  >
    <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--xl">
      <h1 class="nhsuk-fieldset__heading">
        Which types of waste do you transport regularly?
      </h1>
    </legend>
    <div class="nhsuk-form-group">
      <div class="nhsuk-hint"
           id="waste--hint"
      >
        Select all that apply
      </div>
      <div class="nhsuk-checkboxes nhsuk-checkboxes--conditional"
           id="waste"
           aria-describedby="waste--hint"
      >
        <div class="nhsuk-checkboxes__item">
          <input class="nhsuk-checkboxes__input"
                 name="waste"
                 id="waste-1"
                 type="checkbox"
                 value="mines"
          >
          <label class="nhsuk-label nhsuk-checkboxes__label"
                 id="waste-1--label"
                 for="waste-1"
          >
            Waste from mines or quarries
          </label>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Components/Checkboxes WithDisabledItem smoke-test 1`] = `
<div class="nhsuk-form-group">
  <div class="nhsuk-checkboxes"
       id="colours"
  >
    <div class="nhsuk-checkboxes__item">
      <input class="nhsuk-checkboxes__input"
             name="colours"
             id="colours-1"
             type="checkbox"
             value="red"
      >
      <label class="nhsuk-label nhsuk-checkboxes__label"
             id="colours-1--label"
             for="colours-1"
      >
        Red
      </label>
    </div>
    <div class="nhsuk-checkboxes__item">
      <input class="nhsuk-checkboxes__input"
             name="colours"
             id="colours-2"
             type="checkbox"
             value="green"
      >
      <label class="nhsuk-label nhsuk-checkboxes__label"
             id="colours-2--label"
             for="colours-2"
      >
        Green
      </label>
    </div>
    <div class="nhsuk-checkboxes__item">
      <input class="nhsuk-checkboxes__input"
             name="colours"
             id="colours-3"
             disabled
             type="checkbox"
             value="red"
      >
      <label class="nhsuk-label nhsuk-checkboxes__label"
             id="colours-3--label"
             for="colours-3"
      >
        Blue
      </label>
    </div>
  </div>
</div>
`;

exports[`Components/Checkboxes WithErrorBoolean smoke-test 1`] = `
<div class="nhsuk-form-group nhsuk-form-group--error">
  <fieldset class="nhsuk-fieldset"
            aria-describedby="waste-hint"
  >
    <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--xl">
      <h1 class="nhsuk-fieldset__heading">
        Which types of waste do you transport regularly?
      </h1>
    </legend>
    <div class="nhsuk-form-group nhsuk-form-group--error">
      <div class="nhsuk-hint"
           id="waste--hint"
      >
        Select all that apply
      </div>
      <div class="nhsuk-checkboxes"
           id="waste"
           aria-describedby="waste--hint"
      >
        <div class="nhsuk-checkboxes__item">
          <input class="nhsuk-checkboxes__input"
                 name="waste"
                 id="waste-1"
                 type="checkbox"
                 value="animal"
          >
          <label class="nhsuk-label nhsuk-checkboxes__label"
                 id="waste-1--label"
                 for="waste-1"
          >
            Waste from animal carcasses
          </label>
        </div>
        <div class="nhsuk-checkboxes__item">
          <input class="nhsuk-checkboxes__input"
                 name="waste"
                 id="waste-2"
                 type="checkbox"
                 value="mines"
          >
          <label class="nhsuk-label nhsuk-checkboxes__label"
                 id="waste-2--label"
                 for="waste-2"
          >
            Waste from mines or quarries
          </label>
        </div>
        <div class="nhsuk-checkboxes__item">
          <input class="nhsuk-checkboxes__input"
                 name="waste"
                 id="waste-3"
                 type="checkbox"
                 value="farm"
          >
          <label class="nhsuk-label nhsuk-checkboxes__label"
                 id="waste-3--label"
                 for="waste-3"
          >
            Farm or agricultural waste
          </label>
        </div>
      </div>
    </div>
  </fieldset>
</div>
<button class="nhsuk-button"
        aria-disabled="false"
        type="submit"
>
  Toggle Error
</button>
`;

exports[`Components/Checkboxes WithErrorString smoke-test 1`] = `
<div class="nhsuk-form-group nhsuk-form-group--error">
  <fieldset class="nhsuk-fieldset"
            aria-describedby="waste-hint"
  >
    <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--xl">
      <h1 class="nhsuk-fieldset__heading">
        Which types of waste do you transport regularly?
      </h1>
    </legend>
    <div class="nhsuk-form-group nhsuk-form-group--error">
      <div class="nhsuk-hint"
           id="waste--hint"
      >
        Select all that apply
      </div>
      <span class="nhsuk-error-message"
            id="waste--error-message"
            role="alert"
      >
        <span class="nhsuk-u-visually-hidden">
          Error:
        </span>
        Please select an option
      </span>
      <div class="nhsuk-checkboxes"
           id="waste"
           aria-describedby="waste--hint"
      >
        <div class="nhsuk-checkboxes__item">
          <input class="nhsuk-checkboxes__input"
                 name="waste"
                 id="waste-1"
                 type="checkbox"
                 value="animal"
          >
          <label class="nhsuk-label nhsuk-checkboxes__label"
                 id="waste-1--label"
                 for="waste-1"
          >
            Waste from animal carcasses
          </label>
        </div>
        <div class="nhsuk-checkboxes__item">
          <input class="nhsuk-checkboxes__input"
                 name="waste"
                 id="waste-2"
                 type="checkbox"
                 value="mines"
          >
          <label class="nhsuk-label nhsuk-checkboxes__label"
                 id="waste-2--label"
                 for="waste-2"
          >
            Waste from mines or quarries
          </label>
        </div>
        <div class="nhsuk-checkboxes__item">
          <input class="nhsuk-checkboxes__input"
                 name="waste"
                 id="waste-3"
                 type="checkbox"
                 value="farm"
          >
          <label class="nhsuk-label nhsuk-checkboxes__label"
                 id="waste-3--label"
                 for="waste-3"
          >
            Farm or agricultural waste
          </label>
        </div>
      </div>
    </div>
  </fieldset>
</div>
<div class="nhsuk-form-group">
  <label class="nhsuk-label"
         id="error-value--label"
         for="error-value"
  >
    Error Value
  </label>
  <input class="nhsuk-input"
         aria-labelledby="error-value--label"
         name="error-value"
         id="error-value"
         type="text"
         value="Please select an option"
  >
</div>
`;

exports[`Components/Checkboxes WithHintText smoke-test 1`] = `
<div class="nhsuk-form-group">
  <fieldset class="nhsuk-fieldset">
    <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--xl">
      <h1 class="nhsuk-fieldset__heading">
        How do you want to sign in?
      </h1>
    </legend>
    <div class="nhsuk-form-group">
      <div class="nhsuk-checkboxes"
           id="sign-in"
      >
        <div class="nhsuk-checkboxes__item">
          <input class="nhsuk-checkboxes__input"
                 name="gateway"
                 id="government-gateway"
                 type="checkbox"
                 value="gov-gateway"
          >
          <label class="nhsuk-label nhsuk-checkboxes__label"
                 id="government-gateway--label"
                 for="government-gateway"
          >
            Sign in with Government Gateway
          </label>
          <div class="nhsuk-hint nhsuk-checkboxes__hint">
            You’ll have a user ID if you’ve registered for Self Assessment or filed a tax return online before.
          </div>
        </div>
        <div class="nhsuk-checkboxes__item">
          <input class="nhsuk-checkboxes__input"
                 name="verify"
                 id="nhsuk-login"
                 type="checkbox"
                 value="nhsuk-verify"
          >
          <label class="nhsuk-label nhsuk-checkboxes__label"
                 id="nhsuk-login--label"
                 for="nhsuk-login"
          >
            Sign in with NHS.UK login
          </label>
          <div class="nhsuk-hint nhsuk-checkboxes__hint">
            You’ll have an account if you’ve already proved your identity with either Barclays, CitizenSafe, Digidentity, Experian, Post Office, Royal Mail or SecureIdentity.
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Components/Checkboxes WithLegendAsPageHeading smoke-test 1`] = `
<div class="nhsuk-form-group">
  <fieldset class="nhsuk-fieldset"
            aria-describedby="waste--hint"
  >
    <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--xl">
      <h1 class="nhsuk-fieldset__heading">
        Which types of waste do you transport regularly?
      </h1>
    </legend>
    <div class="nhsuk-form-group">
      <div class="nhsuk-hint"
           id="waste--hint"
      >
        Select all that apply
      </div>
      <div class="nhsuk-checkboxes"
           id="waste"
           aria-describedby="waste--hint"
      >
        <div class="nhsuk-checkboxes__item">
          <input class="nhsuk-checkboxes__input"
                 name="waste"
                 id="waste-1"
                 type="checkbox"
                 value="animal"
          >
          <label class="nhsuk-label nhsuk-checkboxes__label"
                 id="waste-1--label"
                 for="waste-1"
          >
            Waste from animal carcasses
          </label>
        </div>
        <div class="nhsuk-checkboxes__item">
          <input class="nhsuk-checkboxes__input"
                 name="waste"
                 id="waste-2"
                 type="checkbox"
                 value="mines"
          >
          <label class="nhsuk-label nhsuk-checkboxes__label"
                 id="waste-2--label"
                 for="waste-2"
          >
            Waste from mines or quarries
          </label>
        </div>
        <div class="nhsuk-checkboxes__item">
          <input class="nhsuk-checkboxes__input"
                 name="waste"
                 id="waste-3"
                 type="checkbox"
                 value="farm"
          >
          <label class="nhsuk-label nhsuk-checkboxes__label"
                 id="waste-3--label"
                 for="waste-3"
          >
            Farm or agricultural waste
          </label>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;
